[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyform-ai"
version = "0.1.1"
description = "AI-enhanced CLI tool for Terraform insights"
authors = [{ name = "Emerson Silva", email = "araujo.emerson28@gmail.com" }]
readme = "README.md"
license = "MIT"                # <— string SPDX, sem tabela
requires-python = ">=3.8"
dependencies = [
    "openai",
    "requests",
    "python-dotenv"
]

[project.scripts]
pyform-ai = "pyform-ai.cli:run_cli"

[tool.setuptools]
packages = ["pyform-ai"] 
